fix: correct the broken style of archive month

--- a/assets/main/scss/_archives.scss
+++ b/assets/main/scss/_archives.scss
@@ -20,6 +20,7 @@
     height: 100%;
     color: var(--#{$prefix}secondary);
     font-weight: bold;
+    text-orientation: sideways;
     text-transform: uppercase;
   }
 
